# templates

./: README.md  flake.nix
anki/: README.md  flake.nix  main.tex
fortran/: .gitignore  README.md  flake.nix  pyproject.toml
fortran/app/: __init__.py  __main__.py  euclidian_norm.f90  example.py
fortran/fortran/: two_norm.f90
latex/: 000-main.tex  001-preamble.tex  005-titlepage.tex  010-introduction.tex  990-appendix.tex  flake.nix
latex-beamer/: .gitignore  000-main.tex  LICENSE  README.md  beamerthemeExecushares.sty  flake.nix
latex-beamer/nix/: mkDocument.nix
latex-full-template/: README.md  flake.nix
latex-synctex-template/: flake.nix
latex/code/: example.py
octave/: .gitignore  flake.nix  pyproject.toml
octave/app/: example.py
octave/fortran/: lapack_sort.f90
octave/octave/: test.m
python/: README.md  pyproject.toml
python-sci/: flake.nix
python-sci/app/: main.py
