[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Logan Reed <me@loganreed.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app.main:main"
